tests/ui/attributes/key-value-expansion-on-mac.stderr
error: unexpected expression: `stringify!(b)`
  --> $DIR/key-value-expansion-on-mac.rs:11:17
   |
LL | #[crablangc_dummy = stringify!(b)]
   |                 ^^^^^^^^^^^^^

error: aborting due to previous error

